--- a/HTML-files/fm_page.html
+++ b/HTML-files/fm_page.html
@@ -4,33 +4,71 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FM Radio Station</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script> 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script> 
 	<link rel="stylesheet" type="text/css" href="../CSS-files/fmpage.css">
 </head>
 <body background="../Image-files/radiopage.jpg" style="background-repeat: no-repeat;background-size: cover;">
-		<div class="container">
+		<div class="container" style="margin-top: -1px;">
 			<div class="row">
-				<div class="col-sm-3"></div>
-				<div class="col-sm-3"><center><a class="btn btn-warning btn-lg" href="AIRFMGold.html">Listen to AIR FM Gold</a></center></div>
-				<div class="col-sm-3"><center><a class="btn btn-warning btn-lg" href="RadioCity.html">Listen to 91.1 Radio City FM</a><center></div>
-				<div class="col-sm-3"></div>
+					<div class="col-lg-3"></div>
+				<div class="col-lg-3">
+				<div class="card" style="width:200px">
+					<img class="card-img-top" src="../Image-files/fmgold.jpg" style="width:100%">
+						<div class="card-body">
+								<center><a class="btn btn-lg btn-warning" href="AIRFMGold.html" style="width:100%;">Listen <div class="glyphicon glyphicon-play"></div></a></center>
+						</div>
+				</div>	
+				</div>
+				<div class="col-lg-3"><div class="card" style="width:200px">
+					<img class="card-img-top" src="../Image-files/fmrainbow.jpg" style="width:100%">
+						<div class="card-body">
+							<center><a class="btn btn-lg btn-warning" href="AIRFMRainbow.html" style="width:100%;">Listen <div class="glyphicon glyphicon-play"></div></a></center>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-3"></div>
 			</div>
 			<br><br>
 			<div class="row">
-				<div class="col-sm-3"></div>
-				<div class="col-sm-3"><center><a style="font-family: Comic Sans MS;" class="btn btn-warning btn-lg" href="BigFM.html">Listen to 92.7 Big FM</a></center></div>
-				<div class="col-sm-3"><center><a class="btn btn-warning btn-lg" href="AIRFMRainbow.html">Listen to AIR FM Rainbow</a><center></div>
-				<div class="col-sm-3"></div>
+					<div class="col-lg-3"></div>
+				<div class="col-lg-3">
+				<div class="card" style="width:200px">
+					<img class="card-img-top" src="../Image-files/bigfm.jpg" style="width:100%">
+						<div class="card-body">
+								<center><a class="btn btn-lg btn-warning" href="BigFM.html" style="width:100%;">Listen <div class="glyphicon glyphicon-play"></div></a></center>
+						</div>
+				</div>	
+				</div>
+				<div class="col-lg-3"><div class="card" style="width:200px">
+					<img class="card-img-top" src="../Image-files/radiocity.jpg" style="width:100%">
+						<div class="card-body">
+							<center><a class="btn btn-lg btn-warning" href="RadioCity.html" style="width:100%;">Listen <div class="glyphicon glyphicon-play"></div></a></center>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-3"></div>
 			</div>
 			<br><br>
 			<div class="row">
-				<div class="col-sm-3"></div>
-				<div class="col-sm-3"><center><a class="btn btn-warning btn-lg" href="RedFM.html">Listen to 93.5 RedFM</a></center></div>
-				<div class="col-sm-3"><center><a class="btn btn-warning btn-lg" href="MirchiFM.html">Listen to 98.3 Radio Mirchi</a></center></div>
-				<div class="col-sm-3"></div>
+					<div class="col-lg-3"></div>
+				<div class="col-lg-3">
+				<div class="card" style="width:200px">
+					<img class="card-img-top" src="../Image-files/redfm.jpg" style="width:100%">
+						<div class="card-body">
+								<center><a class="btn btn-lg btn-warning" href="RedFM.html" style="width:100%;">Listen <div class="glyphicon glyphicon-play"></div></a></center>
+						</div>
+				</div>	
+				</div>
+				<div class="col-lg-3"><div class="card" style="width:200px">
+					<img class="card-img-top" src="../Image-files/radiomirchi.jpg" style="width:100%">
+						<div class="card-body">
+							<center><a class="btn btn-lg btn-warning" href="MirchiFM.html" style="width:100%;">Listen <div class="glyphicon glyphicon-play"></div></a></center>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-3"></div>
 			</div>
 		</div>
-	</div>
 </body>
 </html>
