Updated HTML files

--- a/HTML-files/index.html
+++ b/HTML-files/index.html
@@ -9,18 +9,21 @@
 </head>
 
 <body background="../Image-files/concert2.jpeg" style="background-repeat: no-repeat;background-size: cover">
+<div class="container">
+    <center><img src="../Image-files/logo.jpeg" height="150px" width="150px" style="margin-top:20px;border-radius: 20px;"></center>
+</div>
 
 <div class="wrapper">
     <div class="zoom-effect-container">
         <div class="image-card">
-            <a href="fm_page.html"><h1 id="fm_header">FM Radio Station</h1><br></a>
-            <a href="fm_page.html"><img src="../Image-files/radio.jpg" height="500px" width="500px"></a>
+            <center><a href="fm_page.html"><h1 id="fm_header">FM Radio Station</h1><br></a></center>
+            <a href="fm_page.html"><img src="../Image-files/radio.jpg" height="450px" width="450px" style="border-radius: 50%;"></a>
         </div>
     </div>
     <div class="zoom-effect-container">
         <div class="image-card">
-            <a href="personal_radio.html"><h1 id="personal_radio_header">Personalized Radio Station</h1></a>
-            <a href="personal_radio.html"><img src="../Image-files/concert.jpeg"></a>
+            <center><a href="personal_radio.html"><h1 id="personal_radio_header">Personalized Radio Station</h1></a></center>
+            <a href="personal_radio.html"><img src="../Image-files/concert.jpeg" height="450px" width="450px" style="border-radius: 60%;margin-top: 20px;margin-right:5px;"></a>
         </div>
     </div>
 </div>
