--- a/HTML-files/personal_radio.html
+++ b/HTML-files/personal_radio.html
@@ -32,7 +32,7 @@
         	<div class="container">
           		<div class="navbar-header">
           		<img src="../Image-files/logo.jpeg" height="50px" width="50px" style="margin-left: -200px;"> 
-          		<a class="navbar-brand" href="#" height="50px" style="margin-left: -110px;">AudioBunny</a>
+          		<a class="navbar-brand" href="#" height="50px" style="margin-left: -110px;font-family: Georgia, 'Times New Roman', Times, serif;font-size: 22px;">AudioBunny</a>
             <!-- FOR MOBILE VIEW COLLAPSED BUTTON -->
             	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
               	<span class="sr-only">Toggle navigation</span>
@@ -48,9 +48,9 @@
               <ul id="top-menu" class="nav navbar-nav navbar-right main-nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#artists">Artist Radio</a></li>
-                <li><a href="#Mood">Mood Radio</a></li>
-                <li><a href="#Language">Language Station</a></li>           
-                <li><a href="#Creators">Contact</a></li>
+								<li><a href="#language">Language Station</a></li>
+								<li><a href="#mood">Mood Radio</a></li>
+                <li><a href="#creators">Contact</a></li>
               </ul>           
             </div><!--/.nav-collapse -->
           </div>     
@@ -178,8 +178,46 @@
 			</div>
 	</div>
 		<br><br><br><br>
-	<div class="footer">
-		<h4 style="text-align: center;">&copy; Shivank and Team</h4> 
+		<div class="creators">
+				<div class="row" >
+					<div class="col-lg-3">
+						<div class="card" style="width:400px;margin-top:20px;">
+							<img class="card-img-top" src="../Image-files/pahwa.jpg" height="300px" width="300px" style="border-radius:50%;">
+							<div class="card-body" style="text-align: center;color: beige;font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif">
+								<h4 class="card-title">Shivank Pahwa</h4>
+								<a href="https://www.linkedin.com/in/shivank-pahwa-02ba4776/">See my profile</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3">
+							<div class="card" style="width:400px;margin-top:20px">
+								<img class="card-img-top" src="../Image-files/sheena.jpg" height="300px" width="300px" style="border-radius:50%;">
+								<div class="card-body" style="text-align: center;color: beige;font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif">
+									<h4 class="card-title">Sheena Gupta</h4>
+									<a href="https://www.linkedin.com/in/sheena-gupta-281689150/">See my profile</a>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-3">
+								<div class="card" style="width:400px;margin-top:20px">
+									<img class="card-img-top" src="../Image-files/sourish.jpeg" height="300px" width="300px" style="border-radius:50%;">
+									<div class="card-body" style="text-align: center;color: beige;font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif">
+										<h4 class="card-title">Sourish Das</h4>
+										<a href="https://www.linkedin.com/in/sclandestined/">See my profile</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3">
+									<div class="card" style="width:400px;margin-top:20px">
+										<img class="card-img-top" src="../Image-files/sparsha.jpg" height="300px" width="300px" style="border-radius:50%;">
+										<div class="card-body" style="text-align: center;color: beige;font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif">
+											<h4 class="card-title" >Sparsh Gahlot</h4>
+											<a href="https://www.facebook.com/sparsh.gahlot.3">See my profile</a>
+										</div>
+									</div>
+								</div>
+				</div>
+		</div>
 	</div>
 </body>
 </html>
