--- a/HTML-files/Motivational.html
+++ b/HTML-files/Motivational.html
@@ -33,7 +33,7 @@ line-height:1.618;
 padding:1rem 0;
 height: 100%;
 width:100%;
-background-color:#0665a2;
+background-color:#6666ff;
 }
 
 *,::before,::after {
