--- a/HTML-files/fm_page.html
+++ b/HTML-files/fm_page.html
@@ -9,66 +9,57 @@
 	<link rel="stylesheet" type="text/css" href="../CSS-files/fmpage.css">
 </head>
 <body background="../Image-files/radiopage.jpg" style="background-repeat: no-repeat;background-size: cover;">
-		<div class="container" style="margin-top: -1px;">
+		<div class="container" style="margin-top: 100px;margin-right:110px;">
 			<div class="row">
-					<div class="col-lg-3"></div>
-				<div class="col-lg-3">
+				<div class="col-lg-4">
 				<div class="card" style="width:200px">
-					<img class="card-img-top" src="../Image-files/fmgold.jpg" style="width:100%">
+					<img class="card-img-top" src="../Image-files/fmgold.jpg" style="width:100%;border-top-left-radius: 5px;border-top-right-radius: 5px;">
 						<div class="card-body">
-								<center><a class="btn btn-lg btn-warning" href="AIRFMGold.html" style="width:100%;">Listen <div class="glyphicon glyphicon-play"></div></a></center>
+								<center><a class="btn btn-lg btn-warning" href="AIRFMGold.html" style="width:100%;border-top-left-radius: 0px;border-top-right-radius: 0px;">Listen <div class="glyphicon glyphicon-play"></div></a></center>
 						</div>
 				</div>	
 				</div>
-				<div class="col-lg-3"><div class="card" style="width:200px">
-					<img class="card-img-top" src="../Image-files/fmrainbow.jpg" style="width:100%">
+				<div class="col-lg-4"><div class="card" style="width:200px">
+					<img class="card-img-top" src="../Image-files/fmrainbow.jpg" style="width:100%;border-top-left-radius: 5px;border-top-right-radius: 5px;">
 						<div class="card-body">
-							<center><a class="btn btn-lg btn-warning" href="AIRFMRainbow.html" style="width:100%;">Listen <div class="glyphicon glyphicon-play"></div></a></center>
+							<center><a class="btn btn-lg btn-warning" href="AIRFMRainbow.html" style="width:100%;border-top-left-radius: 0px;border-top-right-radius: 0px;">Listen <div class="glyphicon glyphicon-play"></div></a></center>
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-3"></div>
+				<div class="col-lg-4">
+					<div class="card" style="width:200px">
+						<img class="card-img-top" src="../Image-files/redfm.jpg" style="width:100%;border-top-left-radius: 5px;border-top-right-radius: 5px;">
+							<div class="card-body">
+									<center><a class="btn btn-lg btn-warning" href="RedFM.html" style="width:100%;border-top-left-radius: 0px;border-top-right-radius: 0px;">Listen <div class="glyphicon glyphicon-play"></div></a></center>
+							</div>
+					</div>
+				</div>
 			</div>
 			<br><br>
 			<div class="row">
-					<div class="col-lg-3"></div>
-				<div class="col-lg-3">
+				<div class="col-lg-4">
 				<div class="card" style="width:200px">
-					<img class="card-img-top" src="../Image-files/bigfm.jpg" style="width:100%">
+					<img class="card-img-top" src="../Image-files/bigfm.jpg" style="width:100%;border-top-left-radius: 5px;border-top-right-radius: 5px;">
 						<div class="card-body">
-								<center><a class="btn btn-lg btn-warning" href="BigFM.html" style="width:100%;">Listen <div class="glyphicon glyphicon-play"></div></a></center>
+								<center><a class="btn btn-lg btn-warning" href="BigFM.html" style="width:100%;border-top-left-radius: 0px;border-top-right-radius: 0px;">Listen <div class="glyphicon glyphicon-play"></div></a></center>
 						</div>
 				</div>	
 				</div>
-				<div class="col-lg-3"><div class="card" style="width:200px">
-					<img class="card-img-top" src="../Image-files/radiocity.jpg" style="width:100%">
+				<div class="col-lg-4"><div class="card" style="width:200px">
+					<img class="card-img-top" src="../Image-files/radiocity.jpg" style="width:100%;border-top-left-radius: 5px;border-top-right-radius: 5px;">
 						<div class="card-body">
-							<center><a class="btn btn-lg btn-warning" href="RadioCity.html" style="width:100%;">Listen <div class="glyphicon glyphicon-play"></div></a></center>
+							<center><a class="btn btn-lg btn-warning" href="RadioCity.html" style="width:100%;border-top-left-radius: 0px;border-top-right-radius: 0px;">Listen <div class="glyphicon glyphicon-play"></div></a></center>
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-3"></div>
-			</div>
-			<br><br>
-			<div class="row">
-					<div class="col-lg-3"></div>
-				<div class="col-lg-3">
-				<div class="card" style="width:200px">
-					<img class="card-img-top" src="../Image-files/redfm.jpg" style="width:100%">
-						<div class="card-body">
-								<center><a class="btn btn-lg btn-warning" href="RedFM.html" style="width:100%;">Listen <div class="glyphicon glyphicon-play"></div></a></center>
-						</div>
-				</div>	
+				<div class="col-lg-4">
+						<div class="card" style="width:200px">
+								<img class="card-img-top" src="../Image-files/radiomirchi.jpg" style="width:100%;border-top-left-radius: 5px;border-top-right-radius: 5px;">
+									<div class="card-body">
+										<center><a class="btn btn-lg btn-warning" href="MirchiFM.html" style="width:100%;border-top-left-radius: 0px;border-top-right-radius: 0px;">Listen <div class="glyphicon glyphicon-play"></div></a></center>
+									</div>
+							</div>
 				</div>
-				<div class="col-lg-3"><div class="card" style="width:200px">
-					<img class="card-img-top" src="../Image-files/radiomirchi.jpg" style="width:100%">
-						<div class="card-body">
-							<center><a class="btn btn-lg btn-warning" href="MirchiFM.html" style="width:100%;">Listen <div class="glyphicon glyphicon-play"></div></a></center>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-3"></div>
 			</div>
-		</div>
 </body>
 </html>
